--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ section>h2::after{
 .about-desc p{
     font-size: 1.5rem;
     padding: 20px 0 ;
+    opacity: 1;
 }
 .about-me{
     display: flex;
