--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     font-family: Arial, sans-serif;
     font-size: 2rem;
     transition: background-color 350ms ease-out;
-    overflow: hidden;
+    overflow-Y:hidden;
     animation: ov 4s forwards ease;
 }
 .logo-img{
