--- a/style.css
+++ b/style.css
@@ -294,7 +294,6 @@ section>h2::after{
 .project{
     align-items: flex-start;
     margin-bottom: 8rem;
-    /* background-color: bisque; */
 }
 
 .project h2:hover a{
@@ -342,6 +341,20 @@ section>h2::after{
     margin-right:1.2rem;
     /* margin-bottom: 1.2rem; */
     border-radius: 20px;
+}
+.more-btn{
+    color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    font-size: 1rem;
+    gap: .5rem;
+    margin: 0 auto;
+}
+.more-btn:hover{
+    color: var(--gold);
+    opacity: .7;
 }
 h3{
     font-size: 3rem; 
